--- a/ville.html
+++ b/ville.html
@@ -7,7 +7,8 @@
     <title>koubéhtéo</title>
   </head>
   <body>
-    <h1 id="villeNameDisplay">ville</h1>
+    <h1 id="villeNameDisplay">Ville</h1>
+    <h2 id="villeTemp">Température</h2>
     
     <script type="module" src="/main.js"></script>
     <script type="module" src="/ville.js"></script>
