--- a/ville.html
+++ b/ville.html
@@ -9,6 +9,7 @@
   <body>
     <h1 id="villeNameDisplay">Ville</h1>
     <h2 id="villeTemp">Température</h2>
+    <button id="storageClear">changer de ville</button>
     
     <script type="module" src="/main.js"></script>
     <script type="module" src="/ville.js"></script>
