--- a/ville.html
+++ b/ville.html
@@ -13,7 +13,7 @@
       <h2 id="cityTemp"></h2>
       <p id="cityWeather"></p>
     </div>
-    <h2>Prévision météo pour les heures à venir</h2>
+    <h2 class="title">Prévision météo pour les heures à venir</h2>
     <div id="forecastGrid" class="gridjo">
       <h2 class="forecastHour"></h3>
       <h2 class="forecastHour"></h2>
@@ -24,7 +24,7 @@
       <div class="forecastDisplay"><h2 class="forecastDisplay_temp"></h2><p class="forecastDisplay_weather"></p><h3 class="forecastDisplay_proba"></h3></div>
       <div class="forecastDisplay"><h2 class="forecastDisplay_temp"></h2><p class="forecastDisplay_weather"></p><h3 class="forecastDisplay_proba"></h3></div>
     </div>
-    <h2>Stats vent</h2>
+    <h2 class="title">Stats vent</h2>
     <div id="windGrid"  class="gridjo">
       <h2 class="windHour"></h2>
       <h2 class="windHour"></h2>
@@ -35,13 +35,13 @@
       <div class="windDisplay"><p class="windDisplay_dir"></p><h3 class="windDisplay_speed"></h3></div>
       <div class="windDisplay"><p class="windDisplay_dir"></p><h3 class="windDisplay_speed"></h3></div>
     </div>
-    <h2>stats journée</h2>
+    <h2 class="title">stats journée</h2>
     <div id="dayGrid" class="gridjo">
       <div id="dayDuration"></div>
       <div id="daySet"></div>
       <div id="dayMoon"></div>
     </div>
-    <h2>Prévision sur les 10 prochains jours</h2>
+    <h2 class="title">Prévision sur les 10 prochains jours</h2>
     <div id="weekDiv" class="divjo">
       <div class="weekDisplay"><h2 class="weekDisplay_date"></h2><p class="weekDisplay_weather"></p><h3 class="weekDisplay_temp"></h3></div>
       <div class="weekDisplay"><h2 class="weekDisplay_date"></h2><p class="weekDisplay_weather"></p><h3 class="weekDisplay_temp"></h3></div>
@@ -54,7 +54,7 @@
       <div class="weekDisplay"><h2 class="weekDisplay_date"></h2><p class="weekDisplay_weather"></p><h3 class="weekDisplay_temp"></h3></div>
       <div class="weekDisplay"><h2 class="weekDisplay_date"></h2><p class="weekDisplay_weather"></p><h3 class="weekDisplay_temp"></h3></div>
     </div>
-    <h2>dateImportante</h2>
+    <h2 class="title">dateImportante</h2>
     <form>
       <input type="date" id="dateImportante">
     </form>
@@ -65,5 +65,6 @@
     
     <script type="module" src="/main.js"></script>
     <script type="module" src="/ville.js"></script>
+    <script type="module" src="/notifRegister.js"></script>
   </body>
 </html>
