--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="form">
       <div class="formdiv">
-        <p>entrez le nom de votre commune ou son code postal</p>
+        <p class="title">entrez le nom de votre commune ou son code postal</p>
         <input type="text" id="localisation" required minlength="5">
       </div>
       <div class="formdiv">
